# python-store-fastapi-tdd

./: .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
store/controllers/: product.py
store/core/: config.py
store/db/: mongo.py
store/schemas/: __init__.py  base.py  product.py
store/usecases/: product.py
tests/: conftest.py
tests/schemas/: factories.py  test_product.py
tests/usecases/: test_product.py
